--- a/index.css
+++ b/index.css
@@ -33,13 +33,19 @@ body{
    padding: 15px;
 }
 
-.cloud h2{
+.cloud button{
    padding: 5px 10px;
    border: solid 1px rgb(192, 192, 192);
    border-radius: 5px;
    margin: 10px 0;
+   user-select: none;
+   width: 100%;
+   text-align: left;
+   background: transparent;
+   font-size: 14px;
+   font-weight: bold;
 }
-.cloud h2:hover{
+.cloud button:hover{
    border-color: black;
    cursor: pointer;
 }
