--- a/styles/partials/question.css
+++ b/styles/partials/question.css
@@ -22,6 +22,7 @@
    border-radius: 5px;
    cursor: pointer;
    font-weight: bold;
+   margin: 5px 0;
 }
 
 .option:hover{
@@ -38,4 +39,18 @@
 }
 .option.incorrect{
    background-color: tomato;
+}
+
+.controls{
+   width: 80%;
+   margin: auto;
+   display: flex;
+   justify-content: space-between;
+}
+
+.controls svg{
+   width: 20px;
+}
+.controls svg > *{
+   stroke: rgb(209, 209, 209);
 }
